# autogoal-contrib

./: README.md
autogoal-contrib-common/: pyproject.toml
autogoal-contrib-common/autogoal-contrib-common/: wrappers.py
autogoal-nltk/: pyproject.toml
autogoal-sklearn/autogoal-sklearn/: _builder.py  _generated.py  _manual.py
autogoal_contrib/: pyproject.toml
autogoal_contrib/autogoal_contrib/: __init__.py  registered-contribs.yml  wrappers.py
autogoal_gensim/: pyproject.toml
autogoal_keras/: pyproject.toml
autogoal_nltk/: pyproject.toml
autogoal_nltk/autogoal_nltk/: __init__.py  _builder.py  _generated.py  _manual.py
autogoal_regex/: pyproject.toml
autogoal_sklearn/: pyproject.toml
autogoal_sklearn/autogoal_sklearn/: __init__.py  _builder.py  _generated.py  _manual.py  _utils.py
autogoal_spacy/: pyproject.toml
autogoal_streamlit/: pyproject.toml
autogoal_streamlit/autogoal_streamlit/: __init__.py  cli.py  demo.py
autogoal_telegram/: pyproject.toml
autogoal_transformers/: pyproject.toml
autogoal_transformers/autogoal_transformers/: __init__.py
autogoal_wikipedia/: pyproject.toml
nltk/: pyproject.toml
sklearn/: pyproject.toml
