[tool.poetry]
name = "autogoal_keras"
version = "0.2.0"
description = "keras algorithm library for AutoGOAL"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal-contrib"
packages = [{include = "autogoal_keras"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.12.0"
keras = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
