[tool.poetry]
name = "autogoal_nltk"
version = "0.2.0"
description = "scikit-learn algorithm library for AutoGOAL"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal-contrib"
packages = [{include = "autogoal_nltk"}]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
gensim = "4.1"
numpy = "^1.21.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
