[tool.poetry]
name = "autogoal_sklearn"
version = "0.2.0"
description = "scikit-learn algorithm library for AutoGOAL"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal-contrib"
packages = [{include = "autogoal_sklearn"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.0"
sklearn-crfsuite = "^0.3.6"
numpy = "^1.21.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
