[tool.poetry]
name = "autogoal_telegram"
version = "0.2.0"
description = "telegram library for AutoGOAL"
authors = ["Suilan Estevez-Velarde <suilanestevez@gmail.com>", "Alejandro Piad-Morffis <apiad@apiad.net>", "Ernesto L. Estevanell-Valladares <ernestoestevanellv@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://autogoal.github.io"
documentation = "https://autogoal.github.io"
repository = "https://github.com/autogoal/autogoal-contrib"
packages = [{include = "autogoal_telegram"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
telegram = "^0.0.1"
python-telegram-bot = "^20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
